Oiram building on the Prizm SDK toolchain, works with winsim but not on actual device yet Implemented previous Oiram z80 asm functions in c Added basic simulation layer of CE C toolchain (ce_sim) Convenience proj building

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 */*
+!/src/ce_sim
+!/src/scope_timer
+!/proj/*
 !/src
 !/img
 !/extra/*.8xv
@@ -6,3 +9,5 @@
 !iconc.png
 !makefile
 !readme.md
+/proj/WindowsSim
+/proj/*.user
